// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReflexCard matches snapshot for state ACQUIS 1`] = `
<div>
  <div
    class="rounded-xl border border-white/10 bg-surface-card text-neutral-100 shadow-md transition-all duration-300 hover:shadow-xl border-eaf-indigo/20 bg-eaf-hero-gradient"
  >
    <div
      class="flex flex-col space-y-1.5 p-4 md:p-6 space-y-3"
    >
      <div
        class="flex flex-wrap items-center gap-2"
      >
        <div
          class="w-fit rounded-full border px-3 py-1 text-xs border-eaf-teal/40 bg-eaf-teal/10 text-eaf-teal"
        >
          <span
            aria-hidden="true"
          >
            ✓
          </span>
           
          Acquis
        </div>
        <span
          class="w-fit rounded-full border border-eaf-indigo/30 bg-eaf-indigo/10 px-3 py-1 text-xs text-eaf-text-secondary"
        >
          vaut ~
          0,5
           pt
        </span>
      </div>
      <h3
        class="font-semibold leading-none tracking-tight font-fraunces text-base text-eaf-text-primary"
      >
        1
        . 
        Hausse / baisse en pourcentage
      </h3>
    </div>
    <div
      class="p-4 md:p-6 pt-0 space-y-4"
    >
      <p
        class="text-sm text-eaf-text-secondary"
      >
        Hausse : on multiplie par 1 et quelque. Baisse : on multiplie par zéro virgule quelque chose.
      </p>
      <button
        aria-busy="false"
        class="inline-flex items-center justify-center whitespace-nowrap rounded-lg text-sm font-medium transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 border border-brand-primary text-brand-primary bg-transparent hover:bg-brand-primary hover:text-white h-10 md:h-12 px-4 md:px-6 py-2 md:py-3 text-sm md:text-base min-h-11 w-full border-eaf-indigo/30 text-eaf-orange"
        tabindex="0"
        type="button"
      >
        Ouvrir la fiche
      </button>
    </div>
  </div>
</div>
`;

exports[`ReflexCard matches snapshot for state PAS_VU 1`] = `
<div>
  <div
    class="rounded-xl border border-white/10 bg-surface-card text-neutral-100 shadow-md transition-all duration-300 hover:shadow-xl border-eaf-indigo/20 bg-eaf-hero-gradient"
  >
    <div
      class="flex flex-col space-y-1.5 p-4 md:p-6 space-y-3"
    >
      <div
        class="flex flex-wrap items-center gap-2"
      >
        <div
          class="w-fit rounded-full border px-3 py-1 text-xs border-eaf-indigo/20 bg-eaf-indigo/10 text-eaf-text-tertiary"
        >
          <span
            aria-hidden="true"
          >
            ○
          </span>
           
          Pas vu
        </div>
        <span
          class="w-fit rounded-full border border-eaf-indigo/30 bg-eaf-indigo/10 px-3 py-1 text-xs text-eaf-text-secondary"
        >
          vaut ~
          0,5
           pt
        </span>
      </div>
      <h3
        class="font-semibold leading-none tracking-tight font-fraunces text-base text-eaf-text-primary"
      >
        1
        . 
        Hausse / baisse en pourcentage
      </h3>
    </div>
    <div
      class="p-4 md:p-6 pt-0 space-y-4"
    >
      <p
        class="text-sm text-eaf-text-secondary"
      >
        Hausse : on multiplie par 1 et quelque. Baisse : on multiplie par zéro virgule quelque chose.
      </p>
      <button
        aria-busy="false"
        class="inline-flex items-center justify-center whitespace-nowrap rounded-lg text-sm font-medium transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 border border-brand-primary text-brand-primary bg-transparent hover:bg-brand-primary hover:text-white h-10 md:h-12 px-4 md:px-6 py-2 md:py-3 text-sm md:text-base min-h-11 w-full border-eaf-indigo/30 text-eaf-orange"
        tabindex="0"
        type="button"
      >
        Ouvrir la fiche
      </button>
    </div>
  </div>
</div>
`;

exports[`ReflexCard matches snapshot for state REVOIR 1`] = `
<div>
  <div
    class="rounded-xl border border-white/10 bg-surface-card text-neutral-100 shadow-md transition-all duration-300 hover:shadow-xl border-eaf-indigo/20 bg-eaf-hero-gradient"
  >
    <div
      class="flex flex-col space-y-1.5 p-4 md:p-6 space-y-3"
    >
      <div
        class="flex flex-wrap items-center gap-2"
      >
        <div
          class="w-fit rounded-full border px-3 py-1 text-xs border-eaf-amber/40 bg-eaf-amber/10 text-eaf-amber"
        >
          <span
            aria-hidden="true"
          >
            ⏳
          </span>
           
          À revoir
        </div>
        <span
          class="w-fit rounded-full border border-eaf-indigo/30 bg-eaf-indigo/10 px-3 py-1 text-xs text-eaf-text-secondary"
        >
          vaut ~
          0,5
           pt
        </span>
      </div>
      <h3
        class="font-semibold leading-none tracking-tight font-fraunces text-base text-eaf-text-primary"
      >
        1
        . 
        Hausse / baisse en pourcentage
      </h3>
    </div>
    <div
      class="p-4 md:p-6 pt-0 space-y-4"
    >
      <p
        class="text-sm text-eaf-text-secondary"
      >
        Hausse : on multiplie par 1 et quelque. Baisse : on multiplie par zéro virgule quelque chose.
      </p>
      <button
        aria-busy="false"
        class="inline-flex items-center justify-center whitespace-nowrap rounded-lg text-sm font-medium transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 border border-brand-primary text-brand-primary bg-transparent hover:bg-brand-primary hover:text-white h-10 md:h-12 px-4 md:px-6 py-2 md:py-3 text-sm md:text-base min-h-11 w-full border-eaf-indigo/30 text-eaf-orange"
        tabindex="0"
        type="button"
      >
        Ouvrir la fiche
      </button>
    </div>
  </div>
</div>
`;
